style.css
@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");

* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
  font-family: Roboto, arial, helvetica, sans-serif;
}

body {
  background-color: #efefef;
}

/* Header styling */

#blurb {
  display: flex;
  flex-direction: column;
  text-align: center;
  padding: 1rem;
  justify-content: center;
}

#header_image {
  height: 25vh;
  width: auto;
  object-fit: cover;
}

main h1 {
  text-align: center;
  padding: 1rem;
  font-size: 2rem;
}
/* Content styling */

main {
  display: flex;
  flex-direction: column;
  border-bottom: black 5px solid;
}

main a {
  display: flex;
  justify-content: center;
  padding: 1rem;
}

main p {
  font-size: 1.25rem;
}

main section ul {
  list-style-type: none;
  display: flex;
  padding: 1rem;
  justify-content: center;
  margin-top: auto;
}

main section ul li {
  padding: 1rem;
}

.tablet {
  display: none;
}

.desktop {
  display: none;
}

/* Blog styling */

h2 {
  text-align: center;
  padding-top: 1rem;
}

h4 {
  font-weight: 100;
  color: #6d6b6b;
}
article {
  display: flex;
  text-align: center;
  flex-direction: column;
  padding: 1rem;
  border: 1px black solid;
  justify-content: space-around;
  background-color: #caebf2;
}

/* Footer Styling */

footer {
  display: flex;
  justify-content: center;
  background-color: #ff3b3f;
}

footer a {
  padding: 1rem;
  color: black;
  text-decoration: none;
  font-weight: bold;
  font-size: 2rem;
}

/* Tablet styling */

@media only screen and (min-width: 700px) {
  .mobile {
    display: none;
  }
  .tablet {
    display: block;
  }
  main {
    flex-direction: row;
    justify-content: space-between;
  }
  #header_image {
    height: auto;
  }
  #blogs {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    column-gap: 1rem;
    row-gap: 1rem;
    justify-content: center;
    padding: 1rem;
  }
  article {
    width: 40%;
  }
  main h1 {
    font-size: 2rem;
  }
}

@media only screen and (min-width: 1001px) {
  .tablet {
    display: none;
  }
  .desktop {
    display: block;
  }
  article {
    width: 30%;
  }
}

